2011-08-26 Philipp Gampe <forge.typo3.org@philippgampe.info>

	* [BUGFIX] Fatal error with E_STRICT: Declaration of fetchType must be compatible with interface
	* [TASK] Fix phpdoc and method signatures

2011-08-26  Christopher Stelmaszyk  <chrissitopher@gmx.de>

	* [BUGFIX] XLIFF: Approved attribute is on wrong element

2011-08-19  Christopher Stelmaszyk  <chrissitopher@gmx.de>

	* [TASK] Unify table layouts

2011-08-11  Philipp Gampe  <forge.typo3.org@philippgampe.info>

	* [TASK] Refactor to t3lib_http_Request for external URLs

2011-08-10  Philipp Gampe  <forge.typo3.org@philippgampe.info>

	* [TASK] Add XLIFF files

2011-07-17  Christopher Stelmaszyk  <chrissitopher@gmx.de>

	* [TASK] Fix localization handling to support XLIFF

2011-07-17  Philipp Gampe  <forge.typo3.org@philippgampe.info>

	* [TASK] Merge changes from 4.5 upstream to master

2011-07-17  Philipp Gampe  <forge.typo3.org@philippgampe.info>

	* [BUGFIX] Correct initialisation of BACK_PATH

2011-07-15  Christopher Stelmaszyk  <chrissitopher@gmx.de>

	* [TASK] Add .gitignore file

2011-05-22  Philipp Gampe  <forge.typo3.org@philippgampe.info>

	* Task: Fix whitespace issues in all branches
	* Task: Update Version Number to 1.0.3
	* Release linkvalidator 1.0.3

2011-05-21  Philipp Gampe  <forge.typo3.org@philippgampe.info>

	* Feature #13800: Add user-agent header
	* Fixed Bug #13680: Refactor external link, do not follow senseless loop, add user agent (thanks to Daniel Minder)

2011-05-18  Philipp Gampe  <forge.typo3.org@philippgampe.info>

	* Fixed bug #13828: checkhidden has no effect for some configurations (Michael Miousse)
	* Fixed bug #26731: The info module does not show up in IE 7 and 8 (Michael Miousse)
	* Fixed bug #13368: Content of Tab is not scrollable (Michael Miousse)

2011-04-26 	Michael Miousse  <michael.miousse@infoglobe.ca>

	* Fixed bug #13757: Scheduler task does not work at all

2011-04-21 	Michael Miousse  <michael.miousse@infoglobe.ca>
